# imu_exo_control

./: CMakeLists.txt  README.md  package.xml
config/: EMGReader.cfg  muscleActivationConfig.yaml  viewRobot.rviz
launch/: exoControler.launch  exoController.launch
python/: dataAnalizing.py  emgReader.py  trignoJointReader.py
rqtLayouts/: emgLayout.xml  jointStatesLayoutA.xml  jointStatesLayoutAMirrored.xml  jointStatesLayoutB.xml  jointStatesLayoutBMirrored.xml  stiffnessLayout.xml  unfilteredMA.xml
